# codex-tools-other-api

./: .gitignore  README.md  config.yaml  create_shortcut.py  example.env  pyproject.toml  requirements.txt  start.bat  start.vbs
codex_adapter_bridge/: __init__.py  admin_api.py  cli.py  client.py  codex_config.py  config.py  middleware.py  models.py  protocol.py  server.py  stats.py  tools.py
codex_adapter_bridge/adapters/: __init__.py  base.py  context.py  deepseek.py  doubao.py  glm.py  kimi.py  qwen.py  siliconflow.py
codex_adapter_bridge/config/: __init__.py  defaults.py  loader.py  manager.py  validator.py
codex_adapter_bridge/routes/: __init__.py  chat.py  health.py  helpers.py  image_gen.py  responses.py  static.py
codex_adapter_bridge/tools/: __init__.py  sse_events.py  tool_loop.py  web_search.py
desktop/: index.html  package.json
desktop/electron/: main.js  main.ts  preload.js  preload.ts
desktop/src/: App.css  App.tsx  global.d.ts  i18n.ts  types.ts
desktop/src/api/: client.ts  index.ts  logs.ts  models.ts  settings.ts  status.ts
desktop/src/components/: Badge.tsx  DataTable.tsx  Modal.tsx  StatusBar.tsx  Toast.tsx  Toggle.tsx
desktop/src/hooks/: useLogs.ts  useModels.ts  useSettings.ts  useStatus.ts  useToast.ts
desktop/src/pages/: About.tsx  Dashboard.tsx  Logs.tsx  Models.tsx  Settings.tsx
desktop/src/services/: api.ts
desktop/src/types/: index.ts  log.ts  model.ts  settings.ts  status.ts
