[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-adapter-bridge"
version = "1.0.0"
description = "Codex 国内模型适配工具 - 将 OpenAI Responses API 转换为 Chat Completions API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "click>=8.1",
    "pydantic>=2.0",
]

[project.scripts]
codex-adapter-bridge = "codex_adapter_bridge.cli:main"

[project.urls]
Homepage = "https://github.com/git-liu835/codex-cn-bridge"
